--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test-anything": "./node_modules/test-anything/test-anything.js",
     "javascripting": "./node_modules/javascripting/bin/javascripting",
     "tower-of-babel": "./node_modules/tower-of-babel/tower-of-babel.js",
-    "babel-node": "./node_modules/babel-cli/bin/babel-node.js"
+    "babel-node": "./node_modules/babel-cli/bin/babel-node.js",
+    "esnext-generation": "./node_modules/esnext-generation/cli.js"
   },
   "author": "yujiikebata",
   "license": "ISC",
