--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "yujiikebata",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.3.17",
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
     "browserify-adventure": "^1.7.4",
     "count-to-6": "^0.7.0",
     "esnext-generation": "^2.1.0",
