--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "yujiikebata",
   "license": "ISC",
   "devDependencies": {
+    "@linclark/pkg": "^1.0.2",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "browserify-adventure": "^1.7.4",
